desktop alignment fixes

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,27 +13,29 @@ flex-direction: column;
   max-width: 960px;
   margin:auto;
 }
-
+                /*HEADER*/
 header {
-  display: flex;
-  justify-content: center;
+  display: absolute;
   background-color: black;
   height: 2.32rem;
 }
 
 .header-contents {
+  float: left;
   display: flex;
-  align-items: center;
+
 }
 
 .header-contents img {
   height: 1.5rem;
-  margin: 0 1rem 0 .5rem;
+  float: left;
+  margin: .5rem 1rem 0 .5rem;
 }
 
 .header-contents span {
   margin: .66rem 0;
 }
+/*MOTO BANNER*/
 
 .motobox {
   background-image: url("../images/moto.jpeg");
@@ -59,7 +61,7 @@ header {
   font-size: 2rem;
   margin-top: .25rem;
 }
-
+/*PHONE MEDIA QUERY
 @media only screen and (max-width: 470px){
 
   .motobox {
@@ -77,8 +79,9 @@ header {
   #sportbike {
     font-size: 1rem;
   }
-}
+}   */
 
+                /*NAV BAR*/
 
 nav {
   background-color: firebrick;
@@ -95,7 +98,7 @@ nav ul{
 p.hide-on-small {
   display: none;
 }
-
+/* TABLET MEDIA QUERY
 @media only screen and (max-width: 1024px){
 
 ul.site-container{
@@ -106,7 +109,9 @@ ul.site-container{
     text-align: center;
     padding-top: .75rem;
   }
-}
+}   */
+
+                /* PRODUCT GALLERY */
 
 .gallery {
   display: flex;
@@ -151,7 +156,7 @@ justify-content: space-between;
   padding: .5rem;
   text-align: center;
 }
-
+/* TABLET MEDIA QUERY
 @media only screen and (max-width: 1024px){
 
   .image-box3 {
@@ -160,9 +165,9 @@ justify-content: space-between;
   .image-box1, .image-box2 {
     width: 50%;
   }
-}
+}  */
 
-
+                /* INFO BLOCKS */
 
 .info-container {
   display: flex;
@@ -187,6 +192,8 @@ justify-content: space-between;
   margin-top: .5rem;
   text-align: left;
 }
+
+  /* PHONE MEDIA QUERY
 @media only screen and (max-width: 470px){
   .image-box2 {
     display: none;
@@ -209,10 +216,16 @@ justify-content: space-between;
 }
 
 
-}
+}  */
+
+            /* FOOTER */
 footer {
   display: flex;
-  align-items: center;
   background-color: black;
   height: 5rem;
+}
+
+.bottom {
+  width: 100%;
+
 }
